2003-02-27  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-im): recenter when entering the im buffer

2002-10-23  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-html-regexps-to-replace): added &quot;
	(tnt-buddy-list-menu): added a newline

2002-10-17  Matthias Granberry  <matthias@utdallas.edu>
	* tnt.el (tnt-default-info-message): initial support for setting
	profiles.
	(tnt-set-info): sends user-defined profile to TOC server.
	(tnt-get-info-msg): modified tnt-get-away-msg to use with profile
	strings.
	(tnt-inhibit-key-bindings): added "C-x t f" for tnt-set-info.
	(tnt-buddy-list-mode-map): added "f" for tnt-set-info.
	(tnt-customize): removed second definition of tnt-customize

2002-10-08  Matthias Granberry  <matthias@utdallas.edu>

	* tnt.el (tnt-play-sound): incorporated Doug Alcom (lathi)'s patch
	to allow xemacs to play sounds without native sound support.

2002-10-08  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-customize): just calls (customize "tnt").
	(tnt-inhibit-key-bindings): added "C-x t c" for tnt-customize.
	(tnt-buddy-list-mode-map): added "c" for tnt-customize.
	(tnt-buddy-list-menu): added "[?] help" to each menu.

2002-10-07  Matthias Granberry <matthias@utdallas.edu>
	* tnt.el (tnt-show-help): added tnt-pounce-list, changed
	tnt-pounce-add to tnt-toggle-pounce, and changed key binding for
	tnt-kill.
	* README: updated for new key bindings

2002-10-02  NeilFred Picciotto  <fred@halfshell.halflab.com>

	* tnt.el (tnt-build-buddy-buffer): now display non-buddy IMs and
	any chat rooms the user is currently in.
	(tnt-non-buddy-messages): new function to display in buddy list
	buffer any events in the ring that are IMs from non-buddies.
	(tnt-chat-alist-to-buffer): new function to display chat rooms in
	buddy list buffer.
	(tnt-leave-chat): make it work when called from in the buddy list;
	make it remove the chat from the tnt-chat-alist.